--- a/package.json
+++ b/package.json
@@ -1,8 +1,13 @@
 {
   "name": "pdf-to-voice",
   "version": "1.0.0",
-  "description": "app to convert pdf files to mp3 files",
+  "description": "API to convert pdf files to mp3 files",
   "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/NiicoAdasme/API-convert-pdf-to-voice.git"
+  },
+  "homepage": "https://github.com/NiicoAdasme/API-convert-pdf-to-voice",
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js"
@@ -17,8 +22,10 @@
     "express-validator": "^6.14.2",
     "gtts": "^0.2.1",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.20",
     "path": "^0.12.7",
     "pdf-parse": "^1.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
